changes made for project.html to inedex.html in about page

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <div class="main-container">
             <div class="name left">
                 <!-- <img src="assets/wave1.png" alt=""> -->
-                <a href="projets.html">Wuor Bhang</a>
+                <a href="index.html">Wuor Bhang</a>
             </div>
 
             <div class="seenTopBar" id="myTopnav">
