basic php removal

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 								that is focused on solutions.
 								I am dedicated to maintaining the knowledge about creating unique a website using
 								WordPress plugins and I am also excels in the development using HTML, CSS, JavaScript,
-								and basic PHP.
+								and PHP.
 							</p>
 						</div>
 					</div>
