adding animat for my names

--- a/index.html
+++ b/index.html
@@ -204,11 +204,30 @@
                                     designer, focus is on creating visually appealing and user-friendly interfaces for
                                     websites</div>
                                 <span class="underline-d"></span>
-                                <div class="info sub">2020 &centerdot; Web Development</div>
+                                <div class="info sub">2021 &centerdot; Web Development</div>
                             </div>
                         </div>
                     </a>
                 </div>
+
+                <div class="row-content">
+                    <a href="https://animatemyname.netlify.app">
+                        <div class="project-box">
+                            <div class="img"
+                                style="background: #FFFFFF url(./images/anim\ name.png) center bottom no-repeat; background-size: 280px">
+                            </div>
+                            <div class="body">
+                                <div class="heading">NAME ANIMATION PLAYS</div>
+                                <div class="content sub">Writing names in animation adds a dynamic and eye-catching element, 
+                                    making it stand out and leaving a lasting impression. 
+                                    It showcases creativity.</div>
+                                <span class="underline-d"></span>
+                                <div class="info sub">2023 &centerdot; Web Development</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
 
             </div>
 
