adding S to name

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 style="background: #FFFFFF url(./images/anim\ name.png) center bottom no-repeat; background-size: 280px">
                             </div>
                             <div class="body">
-                                <div class="heading">NAME ANIMATION PLAYS</div>
+                                <div class="heading">NAMES ANIMATION PLAYS</div>
                                 <div class="content sub">Writing names in animation adds a dynamic and eye-catching element, 
                                     making it stand out and leaving a lasting impression. 
                                     It showcases creativity.</div>
