changing site link

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                 
                 <div class="row-content">
-                    <a href="https://animatemyname.netlify.app">
+                    <a href="https://wuorbhangnameanimate.netlify.app">
                         <div class="project-box">
                             <div class="img"
                                 style="background: #FFFFFF url(./images/anim\ name.png) center bottom no-repeat; background-size: 280px">
