--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
 
 
-                
+
                 <div class="row-content">
                     <a href="https://wuorbhangnameanimate.netlify.app">
                         <div class="project-box">
@@ -220,8 +220,9 @@
                             </div>
                             <div class="body">
                                 <div class="heading">NAMES ANIMATION PLAYS</div>
-                                <div class="content sub">Writing names in animation adds a dynamic and eye-catching element, 
-                                    making it stand out and leaving a lasting impression. 
+                                <div class="content sub">Writing names in animation adds a dynamic and eye-catching
+                                    element,
+                                    making it stand out and leaving a lasting impression.
                                     It showcases creativity.</div>
                                 <span class="underline-d"></span>
                                 <div class="info sub">2023 &centerdot; Web Development</div>
@@ -229,6 +230,29 @@
                         </div>
                     </a>
                 </div>
+
+
+
+                <div class="row-content">
+                    <a href="https://mulukluka.cloudaccess.host/">
+                        <div class="project-box">
+                            <div class="img"
+                                style="background: #FFFFFF url(./images/luka-pic.png) center bottom no-repeat; background-size: 280px">
+                            </div>
+                            <div class="body">
+                                <div class="heading">Muluk Kalo Luka's Portfolio</div>
+                                <div class="content sub">A Graphic & Web designer portfolio created for Muluk's graphic
+                                    & web
+                                    designer Business, focus is on creating visually appealing and user-friendly
+                                    interfaces for
+                                    websites</div>
+                                <span class="underline-d"></span>
+                                <div class="info sub">2023 &centerdot; Web Development</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
 
 
             </div>
