removing some contents

--- a/index.html
+++ b/index.html
@@ -241,9 +241,7 @@
                             </div>
                             <div class="body">
                                 <div class="heading">Muluk Kalo Luka's Portfolio</div>
-                                <div class="content sub">A Graphic & Web designer portfolio created for Muluk's graphic
-                                    & web
-                                    designer Business, focus is on creating visually appealing and user-friendly
+                                <div class="content sub">A Graphic & Web designer portfolio created for Muluk's Business, focus is on creating visually appealing and user-friendly
                                     interfaces for
                                     websites</div>
                                 <span class="underline-d"></span>
