--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             <div class="row d-flex contact-info mb-5">
 
 
-                <form id="contact-form" onsubmit="sendEmail()" class="row g-3" action="" method="POST">
+                <form id="contact-form" class="row g-3" action="https://formsubmit.co/your@email.com" method="POST">
                     <div class="col-md-12">
                         <input type="text" class="form-control" name="name" placeholder="Enter Your Name" required>
                     </div>
@@ -151,7 +151,7 @@
 
             </div>
         </footer>
-        <script src="https://smtpjs.com/v3/smtp.js"></script>
+        <!-- <script src="https://smtpjs.com/v3/smtp.js"></script>
         <script>
             function sendEmail() {
                 Email.send({
@@ -169,7 +169,7 @@
                     message => alert("Thanks for Contacting Me your Message is sent Succesfully")
                 );
             }
-        </script>
+        </script> -->
 </body>
 
 </html>
