--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             <div class="row d-flex contact-info mb-5">
 
 
-                <form id="contact-form" class="row g-3" action="https://formsubmit.co/your@email.com" method="POST">
+                <form id="contact-form" class="row g-3" action="https://formsubmit.co/uhuribhang211@gmail.com" method="POST">
                     <div class="col-md-12">
                         <input type="text" class="form-control" name="name" placeholder="Enter Your Name" required>
                     </div>
