--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,9 @@
                     <!--Honeypot-->
                     <input type="text" name="_honey" style="display: none;">
 
+                    <!--Disable Captcha-->
+                    <input type="hidden" name="_captcha" value="flase">
+
                     <div class="col-md-12">
                         <input type="text" class="form-control" name="name" placeholder="Enter Your Name" required>
                     </div>
