--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,7 @@
 
                     <!--Disable Captcha-->
                     <input type="hidden" name="_captcha" value="flase">
+                    <input type="hidden" name="_next" value="https://wuor.github.io/contact.html/success.html">
 
                     <div class="col-md-12">
                         <input type="text" class="form-control" name="name" placeholder="Enter Your Name" required>
