--- a/contact.html
+++ b/contact.html
@@ -97,12 +97,10 @@
 
 
                 <form id="contact-form" class="row g-3" action="https://formsubmit.co/22f00024913e7eb9fa68e34724185af8" method="POST">
-                    <!--Honeypot-->
-                    <input type="text" name="_honey" style="display: none;">
-
-                    <!--Disable Captcha-->
-                    <input type="hidden" name="_captcha" value="flase">
-                    <input type="hidden" name="_next" value="https://wuor.github.io/contact.html/success.html">
+                   <!-- Honeypot -->
+					<input type="text" name="_honey" style="display: none;">
+					<!-- Disable Captcha -->
+					<input type="hidden" name="_captcha" value="false">
 
                     <div class="col-md-12">
                         <input type="text" class="form-control" name="name" placeholder="Enter Your Name" required>
