updating kuza website on my portfolio

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 
 
                 <div class="row-content">
-                    <a href="https://kuzakids.netlify.app/">
+                    <a href="https://kuza.netlify.app">
                         <div class="project-box">
                             <div class="img"
-                                style="background: #FFFFFF url(./images/kuzakids.png) center bottom no-repeat; background-size: 280px">
+                                style="background: #FFFFFF url(./images/kuza.PNG) center bottom no-repeat; background-size: 280px">
                             </div>
                             <div class="body">
                                 <div class="heading">Kuzakids Website</div>
